--- a/medpredictor/notebooks/01-data-processed.ipynb
+++ b/medpredictor/notebooks/01-data-processed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   Diabetes_012          253680 non-null  float64\n",
+      " 1   HighBP                253680 non-null  float64\n",
+      " 2   HighChol              253680 non-null  float64\n",
+      " 3   CholCheck             253680 non-null  float64\n",
+      " 4   BMI                   253680 non-null  float64\n",
+      " 5   Smoker                253680 non-null  float64\n",
+      " 6   Stroke                253680 non-null  float64\n",
+      " 7   HeartDiseaseorAttack  253680 non-null  float64\n",
+      " 8   PhysActivity          253680 non-null  float64\n",
+      " 9   Fruits                253680 non-null  float64\n",
+      " 10  Veggies               253680 non-null  float64\n",
+      " 11  HvyAlcoholConsump     253680 non-null  float64\n",
+      " 12  AnyHealthcare         253680 non-null  float64\n",
+      " 13  NoDocbcCost           253680 non-null  float64\n",
+      " 14  GenHlth               253680 non-null  float64\n",
+      " 15  MentHlth              253680 non-null  float64\n",
+      " 16  PhysHlth              253680 non-null  float64\n",
+      " 17  DiffWalk              253680 non-null  float64\n",
+      " 18  Sex                   253680 non-null  float64\n",
+      " 19  Age                   253680 non-null  float64\n",
+      " 20  Education             253680 non-null  float64\n",
+      " 21  Income                253680 non-null  float64\n",
+      "dtypes: float64(22)\n",
+      "memory usage: 42.6 MB\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(Config.data_raw_path)\n",
     "df.info()"
@@ -22,16 +58,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diabetes_012</th>\n",
+       "      <th>HighBP</th>\n",
+       "      <th>HighChol</th>\n",
+       "      <th>CholCheck</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Stroke</th>\n",
+       "      <th>HeartDiseaseorAttack</th>\n",
+       "      <th>PhysActivity</th>\n",
+       "      <th>Fruits</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AnyHealthcare</th>\n",
+       "      <th>NoDocbcCost</th>\n",
+       "      <th>GenHlth</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "      <th>DiffWalk</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Diabetes_012  HighBP  HighChol  CholCheck   BMI  Smoker  Stroke  \\\n",
+       "0           0.0     1.0       1.0        1.0  40.0     1.0     0.0   \n",
+       "1           0.0     0.0       0.0        0.0  25.0     1.0     0.0   \n",
+       "2           0.0     1.0       1.0        1.0  28.0     0.0     0.0   \n",
+       "3           0.0     1.0       0.0        1.0  27.0     0.0     0.0   \n",
+       "4           0.0     1.0       1.0        1.0  24.0     0.0     0.0   \n",
+       "\n",
+       "   HeartDiseaseorAttack  PhysActivity  Fruits  ...  AnyHealthcare  \\\n",
+       "0                   0.0           0.0     0.0  ...            1.0   \n",
+       "1                   0.0           1.0     0.0  ...            0.0   \n",
+       "2                   0.0           0.0     1.0  ...            1.0   \n",
+       "3                   0.0           1.0     1.0  ...            1.0   \n",
+       "4                   0.0           1.0     1.0  ...            1.0   \n",
+       "\n",
+       "   NoDocbcCost  GenHlth  MentHlth  PhysHlth  DiffWalk  Sex   Age  Education  \\\n",
+       "0          0.0      5.0      18.0      15.0       1.0  0.0   9.0        4.0   \n",
+       "1          1.0      3.0       0.0       0.0       0.0  0.0   7.0        6.0   \n",
+       "2          1.0      5.0      30.0      30.0       1.0  0.0   9.0        4.0   \n",
+       "3          0.0      2.0       0.0       0.0       0.0  0.0  11.0        3.0   \n",
+       "4          0.0      2.0       3.0       0.0       0.0  0.0  11.0        5.0   \n",
+       "\n",
+       "   Income  \n",
+       "0     3.0  \n",
+       "1     1.0  \n",
+       "2     8.0  \n",
+       "3     6.0  \n",
+       "4     4.0  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
