--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -2,6 +2,489 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from medpredictor import Graph, Config, DataFrameOperations, Utils, MetricsDisplay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Setting up the dataframe**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   Diabetes_012          253680 non-null  object \n",
+      " 1   HighBP                253680 non-null  object \n",
+      " 2   HighChol              253680 non-null  object \n",
+      " 3   CholCheck             253680 non-null  object \n",
+      " 4   BMI                   253680 non-null  float64\n",
+      " 5   Smoker                253680 non-null  object \n",
+      " 6   Stroke                253680 non-null  object \n",
+      " 7   HeartDiseaseorAttack  253680 non-null  object \n",
+      " 8   PhysActivity          253680 non-null  object \n",
+      " 9   Fruits                253680 non-null  object \n",
+      " 10  Veggies               253680 non-null  object \n",
+      " 11  HvyAlcoholConsump     253680 non-null  object \n",
+      " 12  AnyHealthcare         253680 non-null  object \n",
+      " 13  NoDocbcCost           253680 non-null  object \n",
+      " 14  GenHlth               253680 non-null  object \n",
+      " 15  MentHlth              253680 non-null  float64\n",
+      " 16  PhysHlth              253680 non-null  float64\n",
+      " 17  DiffWalk              253680 non-null  object \n",
+      " 18  Sex                   253680 non-null  object \n",
+      " 19  Age                   253680 non-null  object \n",
+      " 20  Education             253680 non-null  object \n",
+      " 21  Income                253680 non-null  object \n",
+      "dtypes: float64(3), object(19)\n",
+      "memory usage: 42.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(Config.data_cleaned_path)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diabetes_012</th>\n",
+       "      <th>HighBP</th>\n",
+       "      <th>HighChol</th>\n",
+       "      <th>CholCheck</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Stroke</th>\n",
+       "      <th>HeartDiseaseorAttack</th>\n",
+       "      <th>PhysActivity</th>\n",
+       "      <th>Fruits</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AnyHealthcare</th>\n",
+       "      <th>NoDocbcCost</th>\n",
+       "      <th>GenHlth</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "      <th>DiffWalk</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No diabetes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>60 to 64</td>\n",
+       "      <td>High school graduate</td>\n",
+       "      <td>$15,000 to less than $20,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No diabetes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>50 to 54</td>\n",
+       "      <td>College graduate</td>\n",
+       "      <td>Less than $10,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No diabetes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>60 to 64</td>\n",
+       "      <td>High school graduate</td>\n",
+       "      <td>$75,000 or more</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>No diabetes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Very good</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>70 to 74</td>\n",
+       "      <td>Some high school</td>\n",
+       "      <td>$35,000 to less than $50,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>No diabetes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Very good</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>70 to 74</td>\n",
+       "      <td>Some college or technical school</td>\n",
+       "      <td>$20,000 to less than $25,000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Diabetes_012 HighBP HighChol CholCheck   BMI Smoker Stroke  \\\n",
+       "0  No diabetes    Yes      Yes       Yes  40.0    Yes     No   \n",
+       "1  No diabetes     No       No        No  25.0    Yes     No   \n",
+       "2  No diabetes    Yes      Yes       Yes  28.0     No     No   \n",
+       "3  No diabetes    Yes       No       Yes  27.0     No     No   \n",
+       "4  No diabetes    Yes      Yes       Yes  24.0     No     No   \n",
+       "\n",
+       "  HeartDiseaseorAttack PhysActivity Fruits  ... AnyHealthcare NoDocbcCost  \\\n",
+       "0                   No           No     No  ...           Yes          No   \n",
+       "1                   No          Yes     No  ...            No         Yes   \n",
+       "2                   No           No    Yes  ...           Yes         Yes   \n",
+       "3                   No          Yes    Yes  ...           Yes          No   \n",
+       "4                   No          Yes    Yes  ...           Yes          No   \n",
+       "\n",
+       "     GenHlth MentHlth PhysHlth  DiffWalk     Sex       Age  \\\n",
+       "0       Poor     18.0     15.0       Yes  Female  60 to 64   \n",
+       "1       Good      0.0      0.0        No  Female  50 to 54   \n",
+       "2       Poor     30.0     30.0       Yes  Female  60 to 64   \n",
+       "3  Very good      0.0      0.0        No  Female  70 to 74   \n",
+       "4  Very good      3.0      0.0        No  Female  70 to 74   \n",
+       "\n",
+       "                          Education                        Income  \n",
+       "0              High school graduate  $15,000 to less than $20,000  \n",
+       "1                  College graduate             Less than $10,000  \n",
+       "2              High school graduate               $75,000 or more  \n",
+       "3                  Some high school  $35,000 to less than $50,000  \n",
+       "4  Some college or technical school  $20,000 to less than $25,000  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>253680.000000</td>\n",
+       "      <td>253680.000000</td>\n",
+       "      <td>253680.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>28.382364</td>\n",
+       "      <td>3.184772</td>\n",
+       "      <td>4.242081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.608694</td>\n",
+       "      <td>7.412847</td>\n",
+       "      <td>8.717951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 BMI       MentHlth       PhysHlth\n",
+       "count  253680.000000  253680.000000  253680.000000\n",
+       "mean       28.382364       3.184772       4.242081\n",
+       "std         6.608694       7.412847       8.717951\n",
+       "min        12.000000       0.000000       0.000000\n",
+       "25%        24.000000       0.000000       0.000000\n",
+       "50%        27.000000       0.000000       0.000000\n",
+       "75%        31.000000       2.000000       3.000000\n",
+       "max        98.000000      30.000000      30.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this numeric features we can get this insights:\n",
+    "\n",
+    "**Body Mass Index (BMI)**\n",
+    "* The mean for this index is ~28.38.\n",
+    "* The standard deviation for this feature is ~6.61. As we can see, this is a low value, so data's dispersion is low too.\n",
+    "* The minimum index registered in this dataset is 12. This indicates us that at least one respondent has underweight,  which might require medical attention.\n",
+    "* The maximum index registered in this dataset is 98. This is a less common index's value that could be due to errors in data entry.\n",
+    "* The 50% of the respondets answered 27 as theirs body mass index, which is around the upper limit of the 'normal' BMI range  taking into account respondent's age and sex.\n",
+    "* The 75% of the respondents ansewered 31 as theirs body mass index. According to respondent's age and sex, this could be dangerous. A BMI of 31 falls within the overweight or obese category, which can increase health risks.\n",
+    "\n",
+    "**Days of poor mental health (MetHlth)**\n",
+    "* The mean for this feature is ~3.18. \n",
+    "* The standard deviation for this feature is ~7.41, indicating high variability in the number of poor mental health days among respondents.\n",
+    "* The high standard deviation suggests that while many respondents have few poor mental health days, a subset experiences significantly more, potentially requiring targeted mental health interventions.\n",
+    "* The minimum number of days registered in this dataset is 0. This indicates that at least one respondent is in good mental health.\n",
+    "* The maximum number of days registerd in this dataset is 30. This indicates that at least one person needs to take care of his/her mental health. \n",
+    "* 75% of the respondents reported having 2 or fewer days of bad mental health.. This is very positive, because it indicates that the respondents are in good mental health.\n",
+    "\n",
+    "**Physical illness or injury days in past 30 days (PhysHlth)**\n",
+    "* The mean of 4 days suggests that, on average, respondents experienced physical illness or injury for about 4 days in the past month, which might be a concern depending on the nature and severity of these conditions.\n",
+    "* The standard deviation for this feature is ~8.72. As we can see, this is a high value, so data's dispersion is high too.\n",
+    "* The minimum number of days registered in this dataset is 0. This positive, because at least one respondent didn't suffer any illness or injury.\n",
+    "* The maximum number of days registered in this dataset is 30. This indicates that at least one person suffered an illness or injury for 30 days.\n",
+    "* 75% of the respondents reported experiencing 3 or fewer days of physical illness or injury. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   Diabetes_012          253680 non-null  object \n",
+      " 1   HighBP                253680 non-null  object \n",
+      " 2   HighChol              253680 non-null  object \n",
+      " 3   CholCheck             253680 non-null  object \n",
+      " 4   BMI                   253680 non-null  float64\n",
+      " 5   Smoker                253680 non-null  object \n",
+      " 6   Stroke                253680 non-null  object \n",
+      " 7   HeartDiseaseorAttack  253680 non-null  object \n",
+      " 8   PhysActivity          253680 non-null  object \n",
+      " 9   Fruits                253680 non-null  object \n",
+      " 10  Veggies               253680 non-null  object \n",
+      " 11  HvyAlcoholConsump     253680 non-null  object \n",
+      " 12  AnyHealthcare         253680 non-null  object \n",
+      " 13  NoDocbcCost           253680 non-null  object \n",
+      " 14  GenHlth               253680 non-null  object \n",
+      " 15  MentHlth              253680 non-null  float64\n",
+      " 16  PhysHlth              253680 non-null  float64\n",
+      " 17  DiffWalk              253680 non-null  object \n",
+      " 18  Sex                   253680 non-null  object \n",
+      " 19  Age                   253680 non-null  object \n",
+      " 20  Income                253680 non-null  object \n",
+      "dtypes: float64(3), object(18)\n",
+      "memory usage: 40.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now we create a new df with necessary features\n",
+    "df_n = df.drop(columns=['Education'])\n",
+    "df_n.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Utils**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code section to add new functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Analysis respondents' demographic features**"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +498,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
