update(data_processed): change code's block of processing data

--- a/medpredictor/notebooks/01-data-processed.ipynb
+++ b/medpredictor/notebooks/01-data-processed.ipynb
@@ -294,9 +294,33 @@
     "df['GenHlth'] = df['GenHlth'].map({1:'Excellent', 2:'Very good', 3:'Good', 4:'Fair', 5:'Poor'})\n",
     "df['DiffWalk'] = df['DiffWalk'].map({0:'No', 1:'Yes'})\n",
     "df['Sex'] = df['Sex'].map({0:'Female', 1:'Male'})\n",
-    "df['Age'] = df['Age'].map({1:'18 to 24', 2:'25 to 29', 3:'30 to 34', 4:'35 to 39', 5:'40 to 44', 6:'45 to 49', 7:'50 to 54', 8:'55 to 59', 9:'60 to 64', 10:'65 to 69', 11:'70 to 74', 12:'75 to 79', 13:'80 or older'})\n",
-    "df['Education'] = df['Education'].map({1:'Never attended school or only kindergarten', 2:'Elementary', 3:'Some high school', 4:'High school graduate', 5:'Some college or technical school', 6:'College graduate'})\n",
-    "df['Income'] = df['Income'].map({1:'Less than $10,000', 2:'$10,000 to less than $15,000', 3:'$15,000 to less than $20,000', 4:'$20,000 to less than $25,000', 5:'$25,000 to less than $35,000', 6:'$35,000 to less than $50,000', 7:'$50,000 to less than $75,000', 8:'$75,000 or more'})"
+    "df['Age'] = df['Age'].map({1:'18 to 24', \n",
+    "                           2:'25 to 29', \n",
+    "                           3:'30 to 34', \n",
+    "                           4:'35 to 39', \n",
+    "                           5:'40 to 44', \n",
+    "                           6:'45 to 49', \n",
+    "                           7:'50 to 54', \n",
+    "                           8:'55 to 59', \n",
+    "                           9:'60 to 64', \n",
+    "                           10:'65 to 69', \n",
+    "                           11:'70 to 74', \n",
+    "                           12:'75 to 79', \n",
+    "                           13:'80 or older'})\n",
+    "df['Education'] = df['Education'].map({1:'Never attended school or only kindergarten', \n",
+    "                                       2:'Elementary', \n",
+    "                                       3:'Some high school', \n",
+    "                                       4:'High school graduate', \n",
+    "                                       5:'Some college or technical school', \n",
+    "                                       6:'College graduate'})\n",
+    "df['Income'] = df['Income'].map({1:'Less than $10,000', \n",
+    "                                 2:'$10,000 to less than $15,000', \n",
+    "                                 3:'$15,000 to less than $20,000', \n",
+    "                                 4:'$20,000 to less than $25,000', \n",
+    "                                 5:'$25,000 to less than $35,000', \n",
+    "                                 6:'$35,000 to less than $50,000', \n",
+    "                                 7:'$50,000 to less than $75,000', \n",
+    "                                 8:'$75,000 or more'})"
    ]
   },
   {
