--- a/medpredictor/notebooks/01-data-processed.ipynb
+++ b/medpredictor/notebooks/01-data-processed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,18 +314,18 @@
     "                                       5:'Some college or technical school', \n",
     "                                       6:'College graduate'})\n",
     "df['Income'] = df['Income'].map({1:'Less than $10,000', \n",
-    "                                 2:'$10,000 to less than $15,000', \n",
-    "                                 3:'$15,000 to less than $20,000', \n",
-    "                                 4:'$20,000 to less than $25,000', \n",
-    "                                 5:'$25,000 to less than $35,000', \n",
-    "                                 6:'$35,000 to less than $50,000', \n",
-    "                                 7:'$50,000 to less than $75,000', \n",
+    "                                 2:'$10k to less than $15k', \n",
+    "                                 3:'$15k to less than $20k', \n",
+    "                                 4:'$20k to less than $25k', \n",
+    "                                 5:'$25k to less than $35k', \n",
+    "                                 6:'$35k to less than $50k', \n",
+    "                                 7:'$50k to less than $75k', \n",
     "                                 8:'$75,000 or more'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
