update(eda): add new code's block for analysis respondents' demographic features

--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -911,7 +911,7 @@
     "                        ylabel_name=y_label, \n",
     "                        colors=colors)\n",
     "\n",
-    "graph_education.bar_plot_sns(x='Education', y='Number of registers', hue='Education', data=values_education)"
+    "graph_education.bar_plot_sns(x='Education', y='Number of registers', hue='Education', data=values_education)\n"
    ]
   },
   {
