update(eda): add new settings for income's code blocks

--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -650,42 +650,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>$75,000 or more</td>\n",
+       "      <td>\\$75,000 or more</td>\n",
        "      <td>90385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>$50k to less than $75k</td>\n",
+       "      <td>\\$50k to less than \\$75k</td>\n",
        "      <td>43219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>$35k to less than $50k</td>\n",
+       "      <td>\\$35k to less than \\$50k</td>\n",
        "      <td>36470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$25k to less than $35k</td>\n",
+       "      <td>\\$25k to less than \\$35k</td>\n",
        "      <td>25883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>$20k to less than $25k</td>\n",
+       "      <td>\\$20k to less than \\$25k</td>\n",
        "      <td>20135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>$15k to less than $20k</td>\n",
+       "      <td>\\$15k to less than \\$20k</td>\n",
        "      <td>15994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>$10k to less than $15k</td>\n",
+       "      <td>\\$10k to less than \\$15k</td>\n",
        "      <td>11783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Less than $10,000</td>\n",
+       "      <td>Less than \\$10,000</td>\n",
        "      <td>9811</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -693,32 +693,34 @@
        "</div>"
       ],
       "text/plain": [
-       "            Annual income  Number of registers\n",
-       "0         $75,000 or more                90385\n",
-       "1  $50k to less than $75k                43219\n",
-       "2  $35k to less than $50k                36470\n",
-       "3  $25k to less than $35k                25883\n",
-       "4  $20k to less than $25k                20135\n",
-       "5  $15k to less than $20k                15994\n",
-       "6  $10k to less than $15k                11783\n",
-       "7       Less than $10,000                 9811"
+       "              Annual income  Number of registers\n",
+       "0          \\$75,000 or more                90385\n",
+       "1  \\$50k to less than \\$75k                43219\n",
+       "2  \\$35k to less than \\$50k                36470\n",
+       "3  \\$25k to less than \\$35k                25883\n",
+       "4  \\$20k to less than \\$25k                20135\n",
+       "5  \\$15k to less than \\$20k                15994\n",
+       "6  \\$10k to less than \\$15k                11783\n",
+       "7        Less than \\$10,000                 9811"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "display(Markdown(\"### **Respondents' annual income**\"))\n",
-    "values_income = df['Income'].value_counts().reset_index(name='count')\n",
-    "values_income.columns = ['Annual income', 'Number of registers']\n",
-    "values_income"
+    "values_income_table = df['Income'].value_counts().reset_index(name='count')\n",
+    "values_income_table.columns = ['Annual income', 'Number of registers']\n",
+    "values_income_table['Annual income'] = pd.Categorical(values_income_table['Annual income'])\n",
+    "values_income_table['Annual income'] = values_income_table['Annual income'].str.replace(r'\\$', '\\\\$', regex=True)\n",
+    "values_income_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -742,6 +744,8 @@
     "                '$50k to less than $75k', \n",
     "                '$75,000 or more']\n",
     "\n",
+    "values_income = df['Income'].value_counts().reset_index(name='count')\n",
+    "values_income.columns = ['Annual income', 'Number of registers']\n",
     "values_income['Annual income'] = pd.Categorical(values_income['Annual income'], categories=income_order, ordered=True)\n",
     "values_income['Annual income'] = values_income['Annual income'].str.replace(r'\\$', '\\\\$', regex=True)\n",
     "values_income = values_income.sort_values('Annual income')\n",
