update(eda): change last markdown

--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -1911,7 +1911,7 @@
     "\n",
     "The majority of respondents (**53.72%**) reported not using alcohol or tobacco. Women made up **32.3%** of this group, outnumbering men, who accounted for **21.41%**.\n",
     "\n",
-    "**Trend analysis\n",
+    "**Trend analysis**\n",
     "\n",
     "The data reflect that tobacco use alone is considerably higher than alcohol use or the combination of both. However, it is encouraging to note that more than half of the respondents do not use either of these substances. On the other hand, although men show a slight tendency to use alcohol and tobacco in lower proportions than women, both genders show similar consumption for tobacco only."
    ]
