update(config): remove file metrics.py and update config.py

--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -10,7 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "from IPython.display import Markdown\n",
-    "from medpredictor import Graph, Config, DataFrameOperations, Utils, MetricsDisplay"
+    "from medpredictor import Graph, Config, DataFrameOperations, Utils"
    ]
   },
   {
