update(ML-models): add new code blocks

--- a/medpredictor/notebooks/04-ML-models.ipynb
+++ b/medpredictor/notebooks/04-ML-models.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from medpredictor import Graph, Encoder, Config\n",
+    "from medpredictor import Graph, Encoder, Config, Utils\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +113,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   BMI                       253680 non-null  float64\n",
+      " 1   MentHlth                  253680 non-null  float64\n",
+      " 2   PhysHlth                  253680 non-null  float64\n",
+      " 3   Diabetes_012_enc          253680 non-null  int64  \n",
+      " 4   HighBP_enc                253680 non-null  int64  \n",
+      " 5   HighChol_enc              253680 non-null  int64  \n",
+      " 6   CholCheck_enc             253680 non-null  int64  \n",
+      " 7   Smoker_enc                253680 non-null  int64  \n",
+      " 8   Stroke_enc                253680 non-null  int64  \n",
+      " 9   HeartDiseaseorAttack_enc  253680 non-null  int64  \n",
+      " 10  PhysActivity_enc          253680 non-null  int64  \n",
+      " 11  Fruits_enc                253680 non-null  int64  \n",
+      " 12  Veggies_enc               253680 non-null  int64  \n",
+      " 13  HvyAlcoholConsump_enc     253680 non-null  int64  \n",
+      " 14  AnyHealthcare_enc         253680 non-null  int64  \n",
+      " 15  NoDocbcCost_enc           253680 non-null  int64  \n",
+      " 16  GenHlth_enc               253680 non-null  int64  \n",
+      " 17  DiffWalk_enc              253680 non-null  int64  \n",
+      " 18  Sex_enc                   253680 non-null  int64  \n",
+      " 19  Age_enc                   253680 non-null  int64  \n",
+      " 20  Education_enc             253680 non-null  int64  \n",
+      " 21  Income_enc                253680 non-null  int64  \n",
+      "dtypes: float64(3), int64(19)\n",
+      "memory usage: 42.6 MB\n"
+     ]
+    }
+   ],
    "source": [
     "df_enc_dict = {}\n",
     "\n",
-    "orders = {}"
+    "df_dec_dict = {}\n",
+    "\n",
+    "orders = {}\n",
+    "\n",
+    "num_columns = ['BMI', 'MentHlth', 'PhysHlth']\n",
+    "\n",
+    "df_copy = df.drop(columns=num_columns)\n",
+    "\n",
+    "enc = Encoder()\n",
+    "\n",
+    "df_numerics = enc.robust_scaler_method(df=df, columns_name=num_columns)\n",
+    "\n",
+    "df_enc_dict.update({'numerics':df_numerics})\n",
+    "\n",
+    "orders = {'age': Utils.values_age_order,\n",
+    "          'health_status': Utils.values_status_order,\n",
+    "          'income': Utils.values_income_order,\n",
+    "          'education': Utils.values_education_order,\n",
+    "          'diabetes': Utils.values_diabetes_order}\n",
+    "\n",
+    "for column in df_copy.columns:\n",
+    "    order = orders.get(column, None)\n",
+    "    if order is not None:\n",
+    "        enc_, dec_ = enc.ordinal_encoder_method(df=df_copy, \n",
+    "                                          column_name=column, \n",
+    "                                          order=order)\n",
+    "        df_enc_dict[column] = pd.DataFrame({column + '_enc': enc_})\n",
+    "        df_dec_dict[column] = pd.DataFrame({column + '_dec': dec_})\n",
+    "        continue\n",
+    "    enc_, dec_ = enc.label_encoder_method(df=df_copy,\n",
+    "                                    column_name=column)\n",
+    "    df_enc_dict[column] = pd.DataFrame({column + '_enc': enc_})\n",
+    "    df_dec_dict[column] = pd.DataFrame({column + '_dec': dec_})\n",
+    "\n",
+    "df_enc = pd.concat(list(df_enc_dict.values()), axis=1)\n",
+    "df_dec = pd.concat(list(df_dec_dict.values()), axis=1)\n",
+    "\n",
+    "df_enc.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_h1 = df_enc.drop(columns=['MentHlth', 'PhysHlth',\n",
+    "                            'Diabetes_012_enc', 'CholCheck_enc',\n",
+    "                            'AnyHealthcare_enc', 'NoDocbcCost_enc',\n",
+    "                            'Education_enc', 'Income_enc' \n",
+    "                            ])\n",
+    "y_h1 = df_enc['Diabetes_012_enc']\n",
+    "\n",
+    "X_h2 = df_enc.drop(columns=['MentHlth', 'PhysHlth',\n",
+    "                            'Stroke_enc', 'AnyHealthcare_enc',\n",
+    "                            'NoDocbcCost_enc', 'Education_enc',\n",
+    "                            'Income_enc'])\n",
+    "y_h2 = df_enc['Stroke_enc']\n",
+    "\n",
+    "X_h3 = df_enc.drop(columns=['MentHlth', 'PhysHlth',\n",
+    "                            'HeartDiseaseorAttack_enc','AnyHealthcare_enc',\n",
+    "                            'NoDocbcCost_enc', 'Education_enc',\n",
+    "                            'Income_enc'])\n",
+    "y_h3 = df_enc['HeartDiseaseorAttack_enc']"
    ]
   }
  ],
