update(ML-models): remove unused  imports

--- a/medpredictor/notebooks/04-ML-models.ipynb
+++ b/medpredictor/notebooks/04-ML-models.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from medpredictor import Graph, Encoder, Config, Utils\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.stats import randint\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn import metrics\n",
     "from imblearn.over_sampling import SMOTENC\n",
     "from IPython.display import Markdown"
@@ -1302,7 +1301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
